fix: `z-index` issues on promotions banner

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -46,8 +46,8 @@
     --primary-foreground: 166 67% 8%;
     --secondary: 136 67% 88%;
     --secondary-foreground: 136 67% 8%;
-    --accent: 196 67% 88%;
-    --accent-foreground: 196 67% 8%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
     --destructive: 0 94% 49%;
     --destructive-foreground: 0 0% 100%;
     --ring: 166 67% 88%;
